--- a/index.html
+++ b/index.html
@@ -81,19 +81,6 @@
       background-color: #005050;
       font-weight: bold;
     }
-    button.toggle-btn {
-      background: none;
-      border: none;
-      color: #fff;
-      font-weight: bold;
-      font-size: 14px;
-      cursor: pointer;
-      padding: 0;
-      margin: 0;
-    }
-    button.toggle-btn:hover {
-      text-decoration: underline;
-    }
   </style>
 </head>
 <body>
@@ -110,7 +97,7 @@
   <script>
     const apiKey = 'AIzaSyCP7tzYiGwIZ6cymLAlv_9QgPIEshnRgqI';
     const sheetId = '10W03bvKlVFlIUcxsHkzP_v_13gtnYRBmnrrO0ujB1bU';
-    const sheetURL = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/`;
+    const sheetNames = ['FI Station KOVALCHYK Y.', 'FI Station 2 ULANOVYCH.R'];
 
     const diagonalMap = {
       '860': 86, '850': 85, '750': 75, '700': 70, '650': 65, '580': 58, '575': 58,
@@ -126,56 +113,46 @@
     function getDiagonal(serial) {
       if (!serial || serial.length < 6) return null;
       const match = serial.toUpperCase().match(/^[A-Z]{3}(\d{3})/);
-      if (!match) return null;
-      return diagonalMap[match[1]] || null;
+      return match ? diagonalMap[match[1]] || null : null;
     }
 
-    async function getData(sheetName) {
-      try {
-        const response = await fetch(`${sheetURL}${encodeURIComponent(sheetName)}?key=${apiKey}`);
-        const data = await response.json();
-        return data.values || [];
-      } catch (err) {
-        console.error('Ошибка получения данных:', err);
-        return [];
-      }
+    async function fetchSheetData(sheetName) {
+      const url = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/${encodeURIComponent(sheetName)}?key=${apiKey}`;
+      const res = await fetch(url);
+      const json = await res.json();
+      return json.values ? json.values.slice(1).map(row => ({
+        date: row[0] || '',
+        serial: row[2] || '',
+        status: row[4] || '',
+        person: row[5] || ''
+      })) : [];
     }
 
     async function fetchData() {
-      const sheetNames = ['FI Station KOVALCHYK Y.', 'FI Station 2 ULANOVYCH.R'];
-      let combined = [];
-
+      const all = [];
       for (const name of sheetNames) {
-        const sheetData = await getData(name);
-        if (sheetData.length < 2) continue;
-        const rows = sheetData.slice(1);
-        const mapped = rows.map(row => ({
-          date: row[0] || '',
-          serial: row[2] || '',
-          status: row[4] || '',
-          person: row[5] || ''
-        }));
-        combined = combined.concat(mapped);
+        const data = await fetchSheetData(name);
+        all.push(...data);
       }
-      return combined;
+      return all;
     }
 
     function calculateDetailedStats(data) {
-      // Структура: stats[person][diagonal] = { sum, days: Set }
       const stats = {};
-      data.forEach(({ date, serial, status, person }) => {
+      data.forEach(({ date, serial, person }) => {
         const diagonal = getDiagonal(serial);
-        if (!diagonal) return;
-
+        if (!diagonal || !person) return;
         if (!stats[person]) stats[person] = {};
         if (!stats[person][diagonal]) stats[person][diagonal] = { sum: 0, days: new Set() };
-
         stats[person][diagonal].sum++;
         const day = date.split(' ')[0];
         if (day) stats[person][diagonal].days.add(day);
       });
       return stats;
     }
+
+    let totalModePercent = false;
+    let percentPerMonthMode = false;
 
     function renderTable(stats) {
       const container = document.getElementById('stats-container');
@@ -184,24 +161,18 @@
       const diagonals = Array.from(new Set(
         Object.values(stats).flatMap(p => Object.keys(p).map(Number))
       )).sort((a, b) => b - a);
-
       const people = Object.keys(stats).sort();
-      if (people.length === 0) {
-        container.innerHTML = '<p style="text-align:center; margin-top:20px;">Нет данных для выбранного месяца</p>';
+
+      if (!people.length) {
+        container.innerHTML = '<p style="text-align:center; margin-top:20px;">Нет данных</p>';
         return;
       }
-
-      let percentPerMonthMode = false; // false - режим среднего, true - режим %
-      let totalModePercent = false;    // false - сумма, true - %
 
       const table = document.createElement('table');
       const thead = document.createElement('thead');
       const headerRow = document.createElement('tr');
 
-      // Названия колонок
-      const thName = document.createElement('th');
-      thName.textContent = 'Name';
-      headerRow.appendChild(thName);
+      headerRow.appendChild(Object.assign(document.createElement('th'), { textContent: 'Name' }));
 
       diagonals.forEach(d => {
         const th = document.createElement('th');
@@ -209,178 +180,117 @@
         headerRow.appendChild(th);
       });
 
-      // Кнопка % per month (переключатель)
-      const thPercent = document.createElement('th');
-      const btnPercent = document.createElement('button');
-      btnPercent.textContent = '% per month';
-      btnPercent.className = 'toggle-btn';
-      thPercent.appendChild(btnPercent);
-      headerRow.appendChild(thPercent);
+      headerRow.appendChild(Object.assign(document.createElement('th'), { textContent: 'Day' }));
 
-      // Колонка Day
-      const thDay = document.createElement('th');
-      thDay.textContent = 'Day';
-      headerRow.appendChild(thDay);
+      const thPerMonth = document.createElement('th');
+      thPerMonth.textContent = '% per month';
+      thPerMonth.style.cursor = 'pointer';
+      thPerMonth.title = 'Нажмите, чтобы переключить режим отображения';
+      thPerMonth.addEventListener('click', () => {
+        percentPerMonthMode = !percentPerMonthMode;
+        renderTable(stats);
+      });
+      headerRow.appendChild(thPerMonth);
 
-      // Кнопка Total (переключатель)
       const thTotal = document.createElement('th');
-      thTotal.className = 'total-col';
-      const btnTotal = document.createElement('button');
-      btnTotal.textContent = 'Total';
-      btnTotal.className = 'toggle-btn';
-      thTotal.appendChild(btnTotal);
+      thTotal.textContent = 'Total';
+      thTotal.classList.add('total-col');
+      thTotal.title = 'Нажмите, чтобы переключить отображение Total в процентах';
+      thTotal.addEventListener('click', () => {
+        totalModePercent = !totalModePercent;
+        renderTable(stats);
+      });
       headerRow.appendChild(thTotal);
 
       thead.appendChild(headerRow);
       table.appendChild(thead);
 
       const tbody = document.createElement('tbody');
-
-      // Считаем общую сумму всех диагоналей всех сотрудников
-      let globalTotal = 0;
-      const totalPerDiagonal = {};
-      diagonals.forEach(d => totalPerDiagonal[d] = 0);
-
-      // Считаем сумму по каждому сотруднику
       const personTotals = {};
-      // Для режима % per month - сумма диагоналей по каждому человеку (для деления)
       const personDaysCount = {};
+      const totalPerDiagonal = Object.fromEntries(diagonals.map(d => [d, 0]));
+      let globalTotal = 0;
 
       people.forEach(person => {
-        let total = 0;
-        let daysSet = new Set();
+        const tr = document.createElement('tr');
+        const tdName = document.createElement('td');
+        tdName.textContent = person;
+        tr.appendChild(tdName);
 
-        // Подсчет общей суммы и уникальных дней
+        let total = 0;
+        const daySet = new Set();
+
         diagonals.forEach(d => {
+          const td = document.createElement('td');
           if (stats[person][d]) {
-            total += stats[person][d].sum;
-            stats[person][d].days.forEach(day => daysSet.add(day));
+            const sum = stats[person][d].sum;
+            total += sum;
+            totalPerDiagonal[d] += sum;
+            stats[person][d].days.forEach(day => daySet.add(day));
+            td.textContent = percentPerMonthMode
+              ? ((sum / total) * 100).toFixed(1) + '%'
+              : sum;
+          } else {
+            td.textContent = '-';
           }
+          tr.appendChild(td);
         });
+
+        const dayCount = daySet.size;
+        personDaysCount[person] = dayCount;
         personTotals[person] = total;
-        personDaysCount[person] = daysSet.size;
         globalTotal += total;
 
-        // Записываем по диагоналям общие итоги
-        diagonals.forEach(d => {
-          if (stats[person][d]) {
-            totalPerDiagonal[d] += stats[person][d].sum;
-          }
-        });
+        const tdDays = document.createElement('td');
+        tdDays.textContent = dayCount;
+        tr.appendChild(tdDays);
+
+        const tdPercent = document.createElement('td');
+        if (percentPerMonthMode) {
+          tdPercent.textContent = '';
+        } else {
+          const avg = dayCount > 0 ? total / dayCount : 0;
+          tdPercent.textContent = avg.toFixed(2);
+        }
+        tr.appendChild(tdPercent);
+
+        const tdTotal = document.createElement('td');
+        tdTotal.classList.add('total-col');
+        tdTotal.textContent = totalModePercent
+          ? globalTotal ? ((total / globalTotal) * 100).toFixed(1) + '%' : '0%'
+          : total;
+        tr.appendChild(tdTotal);
+
+        tbody.appendChild(tr);
       });
 
-      // Функция для отрисовки tbody в зависимости от режимов
-      function drawBody() {
-        tbody.innerHTML = '';
-        people.forEach(person => {
-          const tr = document.createElement('tr');
-          const tdName = document.createElement('td');
-          tdName.textContent = person;
-          tr.appendChild(tdName);
-
-          // Диагонали
-          diagonals.forEach(d => {
-            const td = document.createElement('td');
-            if (stats[person][d]) {
-              if (percentPerMonthMode) {
-                // Режим %: показываем процент диагонали от суммы работника
-                const percent = personTotals[person] ? (stats[person][d].sum / personTotals[person]) * 100 : 0;
-                td.textContent = percent.toFixed(1) + '%';
-              } else {
-                // Режим среднего количества за день: sum / количество дней
-                const daysCount = personDaysCount[person] || 1; // избегаем деления на 0
-                const avg = stats[person][d].sum / daysCount;
-                td.textContent = avg.toFixed(2);
-              }
-            } else {
-              td.textContent = '-';
-            }
-            tr.appendChild(td);
-          });
-
-          // % per month / average переключатель (число или %)
-          const tdPercent = document.createElement('td');
-          if (percentPerMonthMode) {
-            // В этом столбце пусто, так как проценты по диагоналям уже показаны
-            td.textContent = '';
-          } else {
-            // Показываем среднее арифметическое по всем диагоналям (total / days)
-            const daysCount = personDaysCount[person] || 1;
-            const avgTotal = personTotals[person] / daysCount;
-            td.textContent = avgTotal.toFixed(2);
-          }
-          tr.appendChild(tdPercent);
-
-          // Колонка Day - количество уникальных дней работы
-          const tdDay = document.createElement('td');
-          tdDay.textContent = personDaysCount[person];
-          tr.appendChild(tdDay);
-
-          // Колонка Total (сумма или % от общей суммы)
-          const tdTotal = document.createElement('td');
-          if (totalModePercent) {
-            const percentTotal = globalTotal ? (personTotals[person] / globalTotal) * 100 : 0;
-            tdTotal.textContent = percentTotal.toFixed(1) + '%';
-          } else {
-            tdTotal.textContent = personTotals[person];
-          }
-          tdTotal.classList.add('total-col');
-          tr.appendChild(tdTotal);
-
-          tbody.appendChild(tr);
-        });
-      }
-
-      drawBody();
       table.appendChild(tbody);
 
-      // Футер с общими итогами
       const tfoot = document.createElement('tfoot');
-      const footerRow = document.createElement('tr');
+      const row = document.createElement('tr');
 
       const tdLabel = document.createElement('td');
       tdLabel.textContent = 'Total Repaired';
-      footerRow.appendChild(tdLabel);
+      row.appendChild(tdLabel);
 
       diagonals.forEach(d => {
         const td = document.createElement('td');
         td.textContent = totalPerDiagonal[d];
         td.classList.add('total-col');
-        footerRow.appendChild(td);
+        row.appendChild(td);
       });
 
-      // Пустая ячейка под % per month
-      const tdEmptyPercent = document.createElement('td');
-      tdEmptyPercent.textContent = '';
-      footerRow.appendChild(tdEmptyPercent);
+      row.appendChild(document.createElement('td')); // Day
+      row.appendChild(document.createElement('td')); // % per month
+      const tdGlobal = document.createElement('td');
+      tdGlobal.classList.add('total-col');
+      tdGlobal.textContent = globalTotal;
+      row.appendChild(tdGlobal);
 
-      // Пустая ячейка под Day
-      const tdEmptyDay = document.createElement('td');
-      tdEmptyDay.textContent = '';
-      footerRow.appendChild(tdEmptyDay);
-
-      // Общая сумма по всем
-      const tdTotalAll = document.createElement('td');
-      tdTotalAll.textContent = globalTotal;
-      tdTotalAll.classList.add('total-col');
-      footerRow.appendChild(tdTotalAll);
-
-      tfoot.appendChild(footerRow);
+      tfoot.appendChild(row);
       table.appendChild(tfoot);
 
       container.appendChild(table);
-
-      // Обработчик кнопки % per month
-      btnPercent.addEventListener('click', () => {
-        percentPerMonthMode = !percentPerMonthMode;
-        drawBody();
-      });
-
-      // Обработчик кнопки Total
-      btnTotal.addEventListener('click', () => {
-        totalModePercent = !totalModePercent;
-        drawBody();
-      });
     }
 
     function populateMonthSelect(months) {
@@ -401,28 +311,29 @@
     async function main() {
       const allData = await fetchData();
 
-      // Получаем список уникальных месяцев из дат
       const monthsSet = new Set();
       allData.forEach(({ date }) => {
         if (!date) return;
-        const m = date.slice(0, 7); // Формат "YYYY-MM"
+        const m = date.slice(0, 7);
         monthsSet.add(m);
       });
-      const months = Array.from(monthsSet).sort();
 
+      const months = Array.from(monthsSet).sort();
       populateMonthSelect(months);
 
+      const select = document.getElementById('month-select');
+
       function updateTable() {
-        const selectedMonth = document.getElementById('month-select').value;
+        const selectedMonth = select.value;
         const filtered = filterDataByMonth(allData, selectedMonth);
         const stats = calculateDetailedStats(filtered);
         renderTable(stats);
       }
 
-      document.getElementById('month-select').addEventListener('change', updateTable);
+      select.addEventListener('change', updateTable);
 
       if (months.length > 0) {
-        document.getElementById('month-select').value = months[months.length - 1];
+        select.value = months[months.length - 1];
         updateTable();
       } else {
         document.getElementById('stats-container').innerHTML = '<p style="text-align:center; margin-top:20px;">Нет данных</p>';
